--- a/views/addAdmin.hbs
+++ b/views/addAdmin.hbs
@@ -32,25 +32,24 @@
                        <a href="/logout" >Logout</a>
 
       </nav>
+      
+                  <div class="sidebar">
+			<h3 class="headingA">{{{title}}}</h3>
+                           <a class="active" href="/getAllAdmins" value="Admins">
+                           Admins<span class="sr-only">(current)</span>
+                           </a>
+                        
+                           <a href="/getAllUsers">Users
+                           </a>
+                     
+                  </div>
+        
+      
+      
+      
       <div class="container-fluid" >
       <div class="row">
-         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-            <h2>{{{title}}}</h2>
-            <div class="sidebar-sticky">
-               <ul class="nav flex-column">
-                  <li class="nav-item">
-                     <a id="hideAdmin" class="nav-link active" href="/getAllAdmins" value="Admins">
-                     Admins<span class="sr-only">(current)</span>
-                     </a>
-                  </li>
-                  <li class="nav-item active">
-                     <a class="nav-link" href="/getAllUsers">
-                     Users
-                     </a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
+         
          <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <div style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor">
                <div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
@@ -80,7 +79,7 @@
                         <tbody>
                            <tr> 
                            <div class="form-group">
-                              <form method="post" action="/addUser" >
+                              <form method="post" action="/addAdmin" >
                                  <td><input type="text" class="form-control" id="name" name="name" placeholder="Enter name"/></td>
                                  <td><input type="text" class="form-control" id="email" name="email" placeholder="Enter email"/></td>
 				                              
