--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -32,25 +32,19 @@
                        <a href="/logout" >Sign out</a>
 
       </nav>
+         <div class="sidebar">
+      			<h3 class="headingA">{{{title}}}</h3>
+                                 <a href="/getAllAdmins" value="Admins">
+                                 Admins<span class="sr-only">(current)</span>
+                                 </a>
+                              
+                                 <a class="active" href="/getAllUsers">Users
+                                 </a>
+                           
+                  </div>
       <div class="container-fluid" >
       <div class="row">
-         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-            <h2>{{{title}}}</h2>
-            <div class="sidebar-sticky">
-               <ul class="nav flex-column">
-                  <li class="nav-item">
-                     <a id="hideAdmin" class="nav-link active" href="/getAllAdmins" value="Admins">
-                     Admins<span class="sr-only">(current)</span>
-                     </a>
-                  </li>
-                  <li class="nav-item active">
-                     <a class="nav-link" href="/getAllUsers">
-                     Users
-                     </a>
-                  </li>
-               </ul>
-            </div>
-         </nav>
+         
          <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <div style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor">
                <div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
