--- a/views/create_award.hbs
+++ b/views/create_award.hbs
@@ -1,4 +1,24 @@
-<a href="/user_dashboard" class="btn btn-outline-secondary" role="button">Return To User Dashboard</a>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Employee Recognition Awards System</a>
+  <button aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item" >
+        <a class="nav-link" href="/user_dashboard">User Dashboard</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link active" href="/create_award">Create Award</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" href="/edit_profile">Edit Profile</a>
+      </li>
+    </ul>
+  </div>
+  <a href="/logout" >Logout</a>
+</nav>
+
 <h1>Create Award</h1>
 <p>Please enter award details</p>
 <form action="/create_award" method="post">
