--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,21 +1,26 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" >
   <a class="navbar-brand" href="#">Employee Recognition Awards System</a>
 </nav>
-<h1 class="h2">Welcome, please login.</h1>
-<form method="post" action="/login">
-  <div class="form-group">
-    <select class="form-control" name="loginType">
-      <option value="user" name="user">Login as User</option>
-      <option value="admin" name="admin">Login as Admin</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="email">Email<label>
-    <input type="text" id="email" placeholder="Enter Email" name="email" required>
-  </div>
-  <div class="form-group">
-    <label for"password">Password</label>
-    <input type="password" id="password" placeholder="Enter Password" name="password" required>
-  </div>
-  <button class="btn btn-primary mb-2" type="submit">Login</button>
-</form>
+<div class="container" style="max-width: 40%;">
+  <h1 class="h2">Welcome, please login.</h1>
+  <form method="post" action="/login">
+    <div class="form-group">
+      <select class="form-control" name="loginType">
+        <option value="user" name="user">Login as User</option>
+        <option value="admin" name="admin">Login as Admin</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" class="form-control" id="email" placeholder="Enter Email" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for"password">Password</label>
+      <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password" required>
+    </div>
+    <button class="btn btn-primary mb-2" type="submit">Login</button>
+  </form>
+  <br>
+  <br>
+  <a href="/forgotPassword" role="button">Forgot Password? Reset here.</a>
+</div>
