--- a/views/user_dashboard.hbs
+++ b/views/user_dashboard.hbs
@@ -1,13 +1,68 @@
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Employee Recognition Awards System</a>
+  <button aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item" >
+        <a class="nav-link active" href="/user_dashboard">User Dashboard <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" href="/create_award">Create Award <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link" href="/edit_profile">Edit Profile</a>
+      </li>
+    </ul>
+  </div>
+  <a href="/logout" >Logout</a>
+</nav>
+
+<!--Hide alert div when its empty -->
+<style>
+  div:empty {
+     display: none;
+  }
+</style>
+
 <h1>User Dashboard</h1>
-<p>Welcome {{name}}</p>
+<div class="alert alert-success" role="alert">{{info}}</div>
+<br>
+<p>Welcome, {{name}}</p>
+<br>
 <div>
-  <a href="/create_award">Create Award</a>
+  {{#if awards}}
+    <h3>Previously Created Awards</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Recipient Name</th>
+          <th scope="col">Recipient Email</th>
+          <th scope="col">Award Type</th>
+          <th scope="col">Creation Time</th>
+          <th scope="col">Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each awards}}
+        <tr>
+          <td>{{this.recipient_name}}</td>
+          <td>{{this.recipient_email}}</td>
+          <td>{{this.award_type}}</td>
+          <td>{{this.creation_time}}</td>
+          <td>
+            <form action="/user_dashboard/delete/" method="post">
+              <button class="btn btn-warning mb-2" type="submit">Delete Award</button>
+              <input type="hidden" name="awardId" value="{{this.id}}">
+            </form>
+          </td>
+        </tr>
+        {{/each}}
+      </tbody>
+    </table>
+  {{else}}
+    <p>Welcome {{name}}, you do not currenty have any awards created.</p>
+    <p>Edit your profile to upload a signature image and create an Award!</p>
+  {{/if}}
 </div>
-<div>
-  <a href="/edit_profile">Edit Profile</a>
-</div>
-<div>
-  <br>
-  <br>
-  <a href="/logout" class="btn btn-outline-secondary" role="button">Logout</a>
-<div>
